objects/AW_Envelope__c.object
<CustomObject>
    <fields>
        <fullName>AW_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to lookup an Account to which this Envelope would be related to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Envelopes</relationshipLabel>
        <relationshipName>Envelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_DateDeclined__c</fullName>
        <description>This field will be used to store the date which the Envelope was declined.</description>
        <label>Date Declined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_DateSentForSignature__c</fullName>
        <description>This field will be used to store the date which the Envelope was sent for signature.</description>
        <label>Date Sent for Signature</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_DateSigned__c</fullName>
        <description>This field will be used to store the date which the Envelope was signed.</description>
        <label>Date Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_LeadAndReferral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to lookup a Lead to which this Envelope would be related to.</description>
        <label>Lead and Referral</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Envelopes</relationshipLabel>
        <relationshipName>Envelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccountId__c</fullName>
        <description>Used to store the Master Account Id, if Master Account Exists for the Active Account</description>
        <formula>IF(AND(ISPICKVAL(AW_Account__r.FinServ__Status__c,&apos;Active&apos;), NOT(ISNULL(AW_Account__r.AW_ParentAccount__r.Id ))), AW_Account__r.AW_ParentAccount__r.Id,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_MasterAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the Master Account Details</description>
        <label>MasterAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Envelopes (MasterAccount)</relationshipLabel>
        <relationshipName>Envelopes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to lookup an Opportunity to which this Envelope would be related to.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Envelopes</relationshipLabel>
        <relationshipName>Envelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_PackageID__c</fullName>
        <description>This field will be used to store the Package Id of the Envelope being sent.</description>
        <externalId>true</externalId>
        <label>Package ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ParentOwnerId__c</fullName>
        <description>Used to store the Parent Owner Id</description>
        <formula>IF(NOT(ISBLANK(AW_Opportunity__r.Id)), AW_Opportunity__r.AW_ParentAccountOwnerId__c,
IF((NOT(ISNULL(AW_Account__r.Id))), AW_Account__r.OwnerId, null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_StatusLastModifiedDate__c</fullName>
        <description>This field stores the date/time when the Status of Envelope was last changed.</description>
        <label>Status Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_Status__c</fullName>
        <description>This field represents the lifecycle of an Envelope.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Sent to Signing Portal</fullName>
                </value>
                <value>
                    <fullName>Awaiting Signature</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Completed - Document Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_URL__c</fullName>
        <description>This field will be used to store the package URL returned from Signing Hub.</description>
        <label>URL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Envelope</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Envelope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Envelopes</pluralLabel>
    <recordTypes>
        <fullName>AW_DefaultEnvelope</fullName>
        <active>true</active>
        <description>This is the default Record Type for when a user creates an Envelope</description>
        <label>Default Envelope</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AW_CannotEditEnvelopeName</fullName>
        <active>true</active>
        <description>This validation rule will be used to prevent users from changing the Name of the Envelope when the Status is not &quot;New&quot;.</description>
        <errorConditionFormula>AND
(
	 NOT(ISPICKVAL(AW_Status__c, &quot;New&quot;)),
	 ISCHANGED(Name)
)</errorConditionFormula>
        <errorMessage>Cannot change the Envelope Name if Status is not New</errorMessage>
    </validationRules>
</CustomObject>